Add new attributes to configuration controller
